# otus_15_homework

./: .travis.yml  CMakeLists.txt  README.md  example.txt  kkmeans_ex.txt  techstack.md  techstack.yml
